--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,7 @@
     justify-content: space-between;
     align-items: center;
     padding-top: 8px;
+    height: 86px;
 }
 .nav-img{
     width: 175px;
@@ -78,7 +79,7 @@
 .sign-up-text p:hover{
     text-decoration: underline;
 }
-.sign-out-btn{
+.sign-in-out-btn{
     background: rgb(229, 9, 20);
     border: none;
     font-weight: 600;
@@ -86,6 +87,12 @@
     padding: 10px 15px;
     border-radius: 5px;
     cursor: pointer;
+}
+.sign-in{
+    display: flex;
+}
+.sign-in *{
+    margin: 0px 5px;
 }
 
 
