--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,7 @@
   background: linear-gradient(rgba(0, 0, 0, 0.785) 60%, rgba(0, 0, 0, 0) 100%);
   position: absolute;
   z-index: 2;
+  width: 100%;
 }
 .nav {
   width: 88vw;
@@ -145,8 +146,13 @@
 }
 
 /* Video Background */
-.youtube-iframe {
+.youtube-video-container{
   position: absolute;
+  width: 100%;
+  overflow: hidden;
   z-index: 1;
+}
+.youtube-iframe {
   aspect-ratio: 16/9;
+  border: none;
 }
